[gd_scene load_steps=3 format=3 uid="uid://bxhifia7ekls7"]

[ext_resource type="Script" path="res://selector niveles/selector_niveles.gd" id="1_cyk08"]
[ext_resource type="Texture2D" uid="uid://dt11ywngi4ttw" path="res://assets/extras/selectorniveles.png" id="2_3xegx"]

[node name="SelectorNiveles" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cyk08")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3xegx")
expand_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button3" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="Button4" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="Button5" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="menu_principal" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
