class_name selector_niveles
extends Control

@onready var nivel1 = $Button as Button
@onready var nivel2 = $Button2 as Button
@onready var nivel3 = $Button3 as Button
@onready var nivel4 = $Button4 as Button
@onready var nivel5 = $Button5 as Button
@onready var menu_principal = $MarginContainer/HBoxContainer/VBoxContainer/Button as Button

# Called when the node enters the scene tree for the first time.
func _ready():
	pass
	#nivel1.rect_position = Vector(100, 200)


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
	pass
